@@ -1,3 +1,9 @@
+2007-01-11  Thomas M. Hinkle  <tom@localhost.localdomain>
+
+	* src/lib/importers/html_importer.py When scrapers fail, display
+	the error, but fallback to a generic importer -- this is really
+	important since scrapers will certainly fail as websites change.
+
 2007-01-06  Thomas M. Hinkle  <thomas_hinkle@sf.net>
 
 	* MANIFEST add valueEditor.glade and valueEditor.py
